fix: fixed couple of code issues uncovered during review

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
-    position: fixed;
-    right: 4%;
+    position: absolute;
+    right: 1%;
     width: 21%;
     max-width: 340px;
     height: fit-content;
